--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".MainActivity2"
             android:exported="false"
+            android:label="@string/title_activity_main2"
             android:theme="@style/Theme.JectpackApp" />
         <activity
             android:name=".MainActivity"
